# argon

./: .gitignore  CMakeLists.txt  MANUAL.adoc  README.adoc
cmake/modules/: FindDBWTL.cmake
doc/: CMakeLists.txt  Doxyfile.in
doc/funref/: function-reference.html  function-reference.txt
doc/manpage/: genmanpage.sh  manpage.conf
doc/manual/: genmanual.sh  manual.html  manual.txt
include/: version.rc.in
include/argon/: argon_config.hh.in  ast.hh  dtsengine  dtsengine.hh  exceptions.hh  fwd.hh  rtti.hh  semantic.hh  token.hh  typeinfo.hh
lemon/: lemon.c
src/: ast.cc  compact.cc  connection.cc  customexception.cc  debug.hh  dtsengine.cc  elements.cc  exceptions.cc  expand.cc  fetchtask.cc  function.cc  genrange.cc  globalcontext.cc  helpers.hh  lambda.cc  logcmd.cc  parser.y  parserapi.hh  pass1visitor.cc  pass2visitor.cc  processor.cc  rtti.cc  semantic.cc  semantic.hh  sequence.cc  sql.cc  sqlexec.cc  storetask.cc  strutils.hh  symboltable.cc  table.cc  table_firebird.cc  table_firebird.hh  table_sqlite.cc  table_sqlite.hh  task.cc  token.cc  tokenizer.hh  transfertask.cc  typetable.cc  (+5 more)
src/builtin/: date.cc  date.hh  debug.cc  debug.hh  functions.hh  numeric.cc  numeric.hh  regex.cc  regex.hh  seq.cc  seq.hh  sql.cc  sql.hh  string.cc  string.hh  sys.cc  sys.hh  trx.cc  trx.hh
src/cli/: climain.cc
tests/: CMakeLists.txt  arguments_check.dts  assert.dts  basic.cc  basic_table_args.dts  basic_table_transfer.dts  column_assign.dts  common-function-for.dts  common-function-repeat.dts  common-math.dts  common-obj-compact.dts  common-obj-expand.dts  connection-spec.dts  decl-connections.dts  function-basic.dts  function-expr.dts  function-if.dts  function-intask.dts  function-simple.dts  id-printer.dts  result_columns.dts  rs-cursor.dts  sections.dts  sql-obj-parameterized.dts  store_test.dts  transfer_test.dts
tests/untested/: basic_table_args.dts  cast.dts  column_assign.dts  common-function-call.dts  common-function-for.dts  common-function-while.dts  common-math.dts  obj-rules.dts  obj-sql-expr.dts  obj-table-expr.dts  sections.dts  store_test.dts
